--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <link rel='stylesheet' type='text/css' href='https://api.tomtom.com/maps-sdk-for-web/cdn/5.x/5.37.2/maps/maps.css'/>
+  <link rel="stylesheet" type="text/css" href="maps.css"/>
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
