--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,12 @@
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <link rel='stylesheet' type='text/css' href='https://api.tomtom.com/maps-sdk-for-web/cdn/5.x/5.37.2/maps/maps.css'/>
   <link rel="stylesheet" type="text/css" href="maps.css"/>
-
-  <!-- add to homescreen for ios -->
+<!--
+  <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+-->
+    <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
