unification of providers

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
   <link rel='stylesheet' type='text/css' href='https://api.tomtom.com/maps-sdk-for-web/cdn/5.x/5.37.2/maps/maps.css'/>
   <link rel="stylesheet" type="text/css" href="maps.css"/>
+  <link rel="stylesheet" href="https://openlayers.org/en/v6.5.0/css/ol.css" type="text/css">
+
 <!--
   <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
